# pdet-data

./: .gitignore  DOCUMENTACAO.md  README.md  decompress-convert-caged.py  decompress-convert-rais.py  decompress-rais.py  list-files.py  pyproject.toml  run.py
data-wrangling/0-raw-to-parquet/: 0-get-columns.py  1-decompress-convert-rais.py  2-decompress-convert-caged.py
pdet_fetcher/: constants.py  fetch.py  fetcher.py  meta.py  reader.py  storage.py
src/pdet_data/: constants.py  meta.py  reader.py  storage.py
