[project]
name = "pdet-data"
version = "0.1.1"
description = "pdet-data: Collect microdata from PDET"
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]

requires-python = ">=3.10"

dependencies = [
    "tqdm",
    "polars",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
